Change ng-click usage to not call on load.

--- a/app/views/table.html
+++ b/app/views/table.html
@@ -49,28 +49,28 @@
 
     </div>
 
-    <button type="button" ng-click="getOneToken('green');" class="btn btn-default navbar-btn"
+    <button type="button" ng-click="getOneToken('green')" class="btn btn-default navbar-btn"
             style="background-color: forestgreen;">Vert ({{table.game.token.green.nb}})
     </button>
-    <button type="button" ng-click="getOneToken('white');" class="btn btn-default navbar-btn"
+    <button type="button" ng-click="getOneToken('white')" class="btn btn-default navbar-btn"
             style="background-color: white;">Blanc ({{table.game.token.white.nb}})
     </button>
-    <button type="button" ng-click="getOneToken('blue');" class="btn btn-default navbar-btn"
+    <button type="button" ng-click="getOneToken('blue')" class="btn btn-default navbar-btn"
             style="background-color: royalblue;">Bleu ({{table.game.token.blue.nb}})
     </button>
-    <button type="button" ng-click="getOneToken('black');" class="btn btn-default navbar-btn"
+    <button type="button" ng-click="getOneToken('black')" class="btn btn-default navbar-btn"
             style="background-color: black; color: white;">Noir ({{table.game.token.black.nb}})
     </button>
-    <button type="button" ng-click="getOneToken('red');" class="btn btn-default navbar-btn"
+    <button type="button" ng-click="getOneToken('red')" class="btn btn-default navbar-btn"
             style="background-color: red;">Rouge ({{table.game.token.red.nb}})
     </button>
     &nbsp;
-    <button type="button" ng-click="getOneToken('yellow');" class="btn btn-default navbar-btn"
+    <button type="button" ng-click="getOneToken('yellow')" class="btn btn-default navbar-btn"
             style="background-color: yellow;">Jaune ({{table.game.token.yellow.nb}})
     </button>
     <br/>
-    <button type="button" ng-click="nextPlayer();" class="btn btn-default navbar-btn">Valider</button>
-    <button type="button" ng-click="cancelAction();" class="btn btn-default navbar-btn">Annuler</button>
+    <button type="button" ng-click="nextPlayer()" class="btn btn-default navbar-btn">Valider</button>
+    <button type="button" ng-click="cancelAction()" class="btn btn-default navbar-btn">Annuler</button>
   </div>
   <div>
     Mes jetons : <br/>
