Start to extarnalise game to a service.

--- a/app/views/table.html
+++ b/app/views/table.html
@@ -1,5 +1,6 @@
 <div class="row-fluid">
   <div class="col-md-12">
+    <h1>{{test}}</h1>
     <h3>Table de {{table.opener.name}} pour {{table.nbPlayerMax}} joueurs, {{table.nbPlayerMax - table.players.length}}
       places restantes</h3>
 
